<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Q.1"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="-16dp"
                    android:background="@color/white"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/q1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/answer_prompt"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/red"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Q.2"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="-16dp"
                    android:background="@color/white"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/q2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/answer_prompt"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/red"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Q.3"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="-16dp"
                    android:background="@color/white"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/q3"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q3_answer_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="5"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/q3_answer_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="7"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/q3_answer_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="9"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/q3_answer_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="11"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Q.4"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="-16dp"
                    android:background="@color/white"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/q4"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_irish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Irish guy" />

                <CheckBox
                    android:id="@+id/cb_jig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jig guy" />

                <CheckBox
                    android:id="@+id/cb_clown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clown guy" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Q.5"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="-16dp"
                    android:background="@color/white"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/q5"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/answer_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/answer_prompt"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/red"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"></View>



        </LinearLayout>


    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_gravity="center_horizontal|center"
            />
    </LinearLayout>


</LinearLayout>
